# plex-mcp-server

./: .env.example  .releaserc  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
plex_mcp_server/: __main__.py  common.py  const.py  plex_client.py  server.py
plex_mcp_server/tools/: client_tools.py  collection_tools.py  library_tools.py  media_tools.py  playlist_tools.py  server_tools.py  sessions_tools.py  tools.py  user_tools.py
